<resources>
    <string name="app_name">EjercicioFinalCine</string>
    <string name="nueva_serie">NUEVA SERIE</string>
    <string name="ver_serie">VER SERIE</string>
    <string name="nombre">Nombre</string>
    <string name="temporadas">Temporadas</string>
    <string name="episodios">Episodios</string>
    <string name="genero">Género</string>
    <string name="año">Año</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="borrar">borrar</string>
    <string name="accion">Acción</string>
    <string name="amor">Amor</string>
    <string name="terror">Terror</string>
    <string name="familiar">Familiar</string>
    <string name="humor">Humor</string>
    <string name="aventura">Aventura</string>
    <string name="resumen">RESUMEN</string>
</resources>
